[tool.poetry]
name = "to"
version = "0.1.3"
description = "Bookmark search API"
authors = ["Tom Bulled <26026015+tombulled@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
PyYAML = "^6.0"
thefuzz = "^0.19.0"
furl = "^2.1.3"
python-Levenshtein = "^0.12.2"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.10"
pylint = "^2.17.4"
mypy = "^1.4.0"
black = "^23.3.0"
pytest = "^7.3.2"
isort = "^5.12.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
